[GTK] Can't run performance tests due to a11y errors https://bugs.webkit.org/show_bug.cgi?id=230705

Reviewed by Sergio Villar Senin.

Disable a11y in WTR since it's no longer nedded with ATSPI.

* WebKitTestRunner/gtk/main.cpp:
(main):
* WebKitTestRunner/wpe/main.cpp:
(main):


Canonical link: https://commits.webkit.org/247617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290293 268f45cc-cd09-0410-ab3c-d52691b4dbfc